# dynamic_follower

./: README.md
navigation2/: nav2-rviz2-container.sh
navigation2/behavior_trees/: follow_dynamic_point.xml
navigation2/nav2/params/: nav2_params.yaml
position_sender/: app.py  is_to_ros.py
ros2_ws/: frames_2025-07-22_12.43.56.gv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/dynamic_follower/lib/dynamic_follower/: follower_node  goal_publisher  turlte_goal_listener  turtle_goal_listener
ros2_ws/install/dynamic_follower/share/dynamic_follower/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/dynamic_follower/share/dynamic_follower/launch/: bringup.launch.py
ros2_ws/install/two_wheeled_robot/local/lib/python3.10/dist-packages/two_wheeled_robot-1.0.0-py3.10.egg-info/: PKG-INFO
ros2_ws/install/two_wheeled_robot/share/ament_index/resource_index/package_run_dependencies/: two_wheeled_robot
ros2_ws/install/two_wheeled_robot/share/ament_index/resource_index/parent_prefix_path/: two_wheeled_robot
ros2_ws/install/two_wheeled_robot/share/two_wheeled_robot/: local_setup.sh  package.sh
ros2_ws/install/two_wheeled_robot/share/two_wheeled_robot/rviz/hospital_world/: nav2_config_object_following.rviz
ros2_ws/log/: latest_build
ros2_ws/src/dynamic_follower/: setup.cfg  setup.py
ros2_ws/src/dynamic_follower/config/: nav2_params.yaml
