<?xml version="1.0"?>
<package format="3">
  <name>dynamic_follower</name>
  <version>0.0.1</version>
  <description>Nó para seguir humano com Nav2</description>

  <maintainer email="seu@email.com">Seu Nome</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

